manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fittrack-ingress
  namespace: fittrack

spec:
  ingressClassName: nginx

  rules:
    - host: fittrack.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
